# zlink

./: .gitignore  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CURVE_REMOVAL_SUMMARY.md  CXX20_BUILD_EXAMPLES.md  CXX_BUILD_EXAMPLES.md  Dockerfile  GEMINI.md  INSTALL  Jenkinsfile  Makefile.am  README.doxygen.md  README.ko.md  README.md  SECURITY.md  SupportedPlatforms.md  THIRD_PARTY_NOTICES.md  VERSION  build.sh  ci_build.sh  claude.md  zlink.sln
.github/: issue_template.md
benchwithzlink-threadsafe/: CMakeLists.txt  plain_cache.json  run_benchmarks.ps1  run_benchmarks.sh  run_comparison.py
benchwithzlink-threadsafe/bench/: bench_dealer_dealer.cpp  bench_dealer_router.cpp  bench_pair.cpp  bench_pubsub.cpp  bench_router_router.cpp  bench_router_router_poll.cpp  bench_stream.cpp
benchwithzlink-threadsafe/common/: bench_common.hpp
benchwithzlink-threadsafe/results/20260130/: bench_linux_ALL_20260130_132117.txt  bench_linux_ALL_20260130_133103.txt  bench_linux_ALL_20260130_133413.txt  bench_linux_ALL_20260130_134906.txt  bench_linux_ALL_20260130_143500.txt  bench_linux_ALL_20260130_153815.txt  bench_linux_ALL_20260130_153954.txt  bench_linux_ALL_20260130_154440.txt  bench_linux_ALL_20260130_170121.txt  bench_linux_ALL_20260130_170716.txt  bench_linux_ALL_20260130_173647.txt  bench_linux_ALL_20260130_174316.txt  bench_linux_ALL_20260130_182225.txt  bench_linux_ALL_20260130_191604.txt  bench_linux_ALL_20260130_202756.txt  bench_linux_ALL_20260130_205759.txt  bench_linux_PAIR_20260130_210953.txt  bench_linux_PAIR_20260130_212030.txt  bench_linux_PAIR_20260130_213058.txt  bench_linux_PAIR_20260130_213830.txt  bench_linux_PAIR_20260130_220306.txt  bench_linux_PAIR_20260130_220645.txt  bench_linux_PAIR_20260130_223428.txt  bench_linux_PAIR_20260130_223846.txt  bench_linux_PAIR_20260130_224140.txt
benchwithzlink-threadsafe/results/20260131/: bench_linux_ALL_20260131_085928.txt  bench_linux_ALL_20260131_090822.txt  bench_linux_ALL_20260131_091231.txt  bench_linux_ALL_20260131_094355.txt  bench_linux_PAIR_20260131_001034.txt  bench_linux_PAIR_20260131_003844.txt  bench_linux_PAIR_20260131_005745.txt  bench_linux_PAIR_20260131_073450.txt  bench_linux_PAIR_20260131_074331.txt  bench_linux_PAIR_20260131_075414.txt  bench_linux_PAIR_20260131_075833.txt  bench_linux_PAIR_20260131_080147.txt
bindings/cpp/: API_DRAFT.md  CMakeLists.txt  PLAN.md  TESTING.md
bindings/cpp/benchwithzlink/: bench_pattern_dealer_dealer.cpp  bench_pattern_dealer_router.cpp  bench_pattern_gateway.cpp  bench_pattern_pair.cpp  bench_pattern_pubsub.cpp  bench_pattern_router_router.cpp  bench_pattern_router_router_poll.cpp  bench_pattern_spot.cpp  bench_pattern_stream.cpp  pair_bench.cpp  pattern_dispatch.hpp  run_benchmarks.sh  zlink_cache_linux-x64.json
bindings/cpp/benchwithzlink/results/20260212/: bench_cpp_linux_ALL_20260212_011841.txt  bench_cpp_linux_PAIR_20260212_004432.txt  bench_cpp_linux_PAIR_20260212_004955.txt  bench_cpp_linux_PAIR_20260212_005905.txt  bench_cpp_linux_PAIR_20260212_010232.txt
bindings/cpp/include/: zlink.hpp
bindings/cpp/tests/: test_cpp_basic.cpp  test_cpp_dealer_router.cpp  test_cpp_discovery_gateway_spot.cpp  test_cpp_enums.cpp  test_cpp_multipart.cpp  test_cpp_pair.cpp  test_cpp_pubsub.cpp  test_cpp_spot.cpp  test_cpp_xpub_xsub.cpp  test_helpers.hpp
buildenv/: setup.ps1
core/bench/benchwithzlink/: CMakeLists.txt  baseline_cache_linux-x64.json  run_benchmarks.ps1  run_benchmarks.sh  run_benchmarks_multi.sh  run_comparison.py
core/bench/benchwithzlink/baseline/: bench_baseline_dealer_router.cpp  bench_baseline_gateway.cpp  bench_baseline_pair.cpp  bench_baseline_pubsub.cpp  bench_baseline_router_router.cpp  bench_baseline_router_router_poll.cpp  bench_baseline_stream.cpp
core/bench/benchwithzlink/baseline/zlink_dist/linux-x64/include/: zlink.h
core/bench/benchwithzlink/baseline/zlink_dist/linux-x64/lib/: libzlink.so.5
core/bench/benchwithzlink/common/: bench_common.hpp
core/bench/benchwithzlink/current/: bench_current_dealer_dealer.cpp  bench_current_gateway.cpp  bench_current_router_router.cpp  bench_current_router_router_poll.cpp  bench_current_spot.cpp  bench_current_stream.cpp
core/bench/benchwithzlink/docs/: gateway_benchmark_fix.md
core/bench/benchwithzlink/multi/: run_comparison.py
core/bench/benchwithzlink/multi/baseline/: bench_baseline_multi_dealer_router.cpp  bench_baseline_multi_pubsub.cpp  bench_baseline_multi_spot.cpp
core/bench/benchwithzlink/multi/common/: bench_common.hpp
core/bench/benchwithzlink/multi/current/: bench_current_multi_dealer_dealer.cpp  bench_current_multi_dealer_router.cpp  bench_current_multi_gateway.cpp  bench_current_multi_router_router.cpp  bench_current_multi_router_router_poll.cpp
core/bench/benchwithzlink/results/: bench_windows_ALL_20260205_170805.txt  bench_windows_PAIR_20260205_170757.txt
core/bench/benchwithzlink/results/20260202/: bench_linux_ALL_20260202_141412_rerun.txt  bench_linux_ALL_20260202_143341.txt  bench_linux_ALL_20260202_143709.txt  bench_linux_STREAM_20260202_155548.txt  bench_linux_STREAM_20260202_163302.txt
core/bench/benchwithzlink/results/20260207/: bench_linux_ALL_20260207_134053.txt  bench_linux_ALL_20260207_134643.txt  bench_linux_ALL_20260207_140205.txt  bench_linux_ALL_20260207_150625.txt  bench_linux_ALL_20260207_151702.txt  bench_linux_GATEWAY_20260207_135745.txt
core/bench/benchwithzlink/results/20260211/: bench_linux_SPOT_20260211_123645.txt
core/bench/benchwithzlink/single/: run_benchmarks.sh
core/bench/benchwithzlink/single/baseline/: bench_baseline_dealer_router.cpp  bench_baseline_pubsub.cpp  bench_baseline_spot.cpp
core/bench/benchwithzlink/single/common/: bench_common.hpp  bench_common_multi.hpp
core/bench/benchwithzlink/single/current/: bench_current_dealer_dealer.cpp
perf/comparison/: CMakeLists.txt  run_comparison.py
perf/comparison/libzmq/: bench_zmq_pair.cpp  bench_zmq_pubsub.cpp  bench_zmq_router.cpp
perf/comparison/zlink/: bench_zlink_pair.cpp  bench_zlink_pubsub.cpp  bench_zlink_router.cpp
(+983 files in other folders)
